Make services cards title be smaller to avoid overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -261,6 +261,7 @@ video a:hover {
     font-weight: 600;
     font-style: normal;
     font-family: serif;
+    font-size: 1em;
 }
 
 
